Make a option for interruptive or non-interruptive
