# controllers/update_switch/update_switch.go
@@ -15,9 +15,10 @@ import (
 
 // UpdateSwitch is a struct for the http objects
 type UpdateSwitch struct {
-	Request  *http.Request
-	Client   switch_operations.Switch
-	ImageURL string
+	Request    *http.Request
+	Client     switch_operations.Switch
+	UpdateType string
+	ImageURL   string
 }
 
 // MiddleWare handles the route call
@@ -35,9 +36,10 @@ func MiddleWare(r *http.Request, body *models.UpdateSwitch) middleware.Responder
 	}
 
 	return &UpdateSwitch{
-		Request:     r,
-		Client:      client,
-		ImageURL:    *body.ImageURL,
+		Request:    r,
+		Client:     client,
+		UpdateType: *body.UpdateType,
+		ImageURL:   *body.ImageURL,
 	}
 }
 
@@ -56,7 +58,7 @@ func (c *UpdateSwitch) notSupported(rw http.ResponseWriter, rp runtime.Producer)
 }
 
 func (c *UpdateSwitch) postUpdateSwitch(rw http.ResponseWriter, rp runtime.Producer) {
-	err := c.Client.Update(c.ImageURL)
+	err := c.Client.Update(c.UpdateType, c.ImageURL)
 	if err != nil {
 		rp.Produce(rw, fmt.Sprintf("failed to update switch: %+v", err))
 		return
