# models/update_switch.go
@@ -1,5 +1,3 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
 package models
 
 // This file was generated by the swagger tool.
@@ -9,13 +7,11 @@ import (
 	strfmt "github.com/go-openapi/strfmt"
 
 	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
 	"github.com/go-openapi/validate"
 )
 
 // UpdateSwitch update switch
 // swagger:model UpdateSwitch
-
 type UpdateSwitch struct {
 
 	// image URL
@@ -34,20 +30,14 @@ type UpdateSwitch struct {
 	// Required: true
 	SwitchType *string `json:"switchType"`
 
+	// update type
+	// Required: true
+	UpdateType *string `json:"updateType"`
+
 	// username
 	// Required: true
 	Username *string `json:"username"`
 }
-
-/* polymorph UpdateSwitch imageURL false */
-
-/* polymorph UpdateSwitch ip false */
-
-/* polymorph UpdateSwitch password false */
-
-/* polymorph UpdateSwitch switchType false */
-
-/* polymorph UpdateSwitch username false */
 
 // Validate validates this update switch
 func (m *UpdateSwitch) Validate(formats strfmt.Registry) error {
@@ -69,6 +59,11 @@ func (m *UpdateSwitch) Validate(formats strfmt.Registry) error {
 	}
 
 	if err := m.validateSwitchType(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateUpdateType(formats); err != nil {
 		// prop
 		res = append(res, err)
 	}
@@ -120,29 +115,20 @@ func (m *UpdateSwitch) validateSwitchType(formats strfmt.Registry) error {
 	return nil
 }
 
-func (m *UpdateSwitch) validateUsername(formats strfmt.Registry) error {
+func (m *UpdateSwitch) validateUpdateType(formats strfmt.Registry) error {
 
-	if err := validate.Required("username", "body", m.Username); err != nil {
+	if err := validate.Required("updateType", "body", m.UpdateType); err != nil {
 		return err
 	}
 
 	return nil
 }
 
-// MarshalBinary interface implementation
-func (m *UpdateSwitch) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
+func (m *UpdateSwitch) validateUsername(formats strfmt.Registry) error {
 
-// UnmarshalBinary interface implementation
-func (m *UpdateSwitch) UnmarshalBinary(b []byte) error {
-	var res UpdateSwitch
-	if err := swag.ReadJSON(b, &res); err != nil {
+	if err := validate.Required("username", "body", m.Username); err != nil {
 		return err
 	}
-	*m = res
+
 	return nil
 }
