# swagger.yaml
@@ -39,7 +39,7 @@ definitions:
     - password
     - imageURL
     - switchType
-    - switchModel
+    - updateType
     properties:
       ip:
         type: string
@@ -51,7 +51,7 @@ definitions:
         type: string
       switchType:
         type: string
-      switchModel:
+      updateType:
         type: string
 
 securityDefinitions:
